-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
Interpreter crashed on attempt to allocate two-dimensional array of values:
Current thread (0x00007f6ebc43d800): JavaThread "oracle.micro.valhalla.lword.matrix.Value.multIJK-jmh-worker-1" daemon [_thread_in_vm, id=18339, stack(0x00007f6e9c0cf000,0x00007f6e9c1d0000)]
Stack: [0x00007f6e9c0cf000,0x00007f6e9c1d0000], sp=0x00007f6e9c1cda30, free space=1018k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x9f4c25] Klass::array_klass_or_null()+0x35
V [libjvm.so+0xba63c6] ObjArrayKlass::allocate_objArray_klass(ClassLoaderData*, int, Klass*, Thread*)+0xa6
V [libjvm.so+0xda9bb5] ValueArrayKlass::array_klass_impl(bool, int, Thread*)+0x175
V [libjvm.so+0xd3e4b3] SystemDictionary::resolve_array_class_or_null(Symbol*, Handle, Handle, Thread*)+0xe3
V [libjvm.so+0xd40201] SystemDictionary::resolve_or_fail(Symbol*, Handle, Handle, bool, Thread*)+0x351
V [libjvm.so+0x6a36ba] ConstantPool::klass_at_impl(constantPoolHandle const&, int, bool, Thread*)+0xea
V [libjvm.so+0x89ca2a] InterpreterRuntime::multianewarray(JavaThread*, int*)+0x22a
j oracle.micro.valhalla.lword.matrix.Value.setup()V+9
How to reproduce:
1. Download benchmarks.jar from http://cr.openjdk.java.net/~skuksenko/valhalla/benchmarks.18.04.09/benchmarks.jar
or download sources and build: hg clone http://default:default@sthserver02.se.oracle.com:5000/valhalla-lword-benchmarks
2. Command line:
java -Xint -XX:+EnableValhalla -jar target/benchmarks.jar matrix.Value -f 1
Current thread (0x00007f6ebc43d800): JavaThread "oracle.micro.valhalla.lword.matrix.Value.multIJK-jmh-worker-1" daemon [_thread_in_vm, id=18339, stack(0x00007f6e9c0cf000,0x00007f6e9c1d0000)]
Stack: [0x00007f6e9c0cf000,0x00007f6e9c1d0000], sp=0x00007f6e9c1cda30, free space=1018k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x9f4c25] Klass::array_klass_or_null()+0x35
V [libjvm.so+0xba63c6] ObjArrayKlass::allocate_objArray_klass(ClassLoaderData*, int, Klass*, Thread*)+0xa6
V [libjvm.so+0xda9bb5] ValueArrayKlass::array_klass_impl(bool, int, Thread*)+0x175
V [libjvm.so+0xd3e4b3] SystemDictionary::resolve_array_class_or_null(Symbol*, Handle, Handle, Thread*)+0xe3
V [libjvm.so+0xd40201] SystemDictionary::resolve_or_fail(Symbol*, Handle, Handle, bool, Thread*)+0x351
V [libjvm.so+0x6a36ba] ConstantPool::klass_at_impl(constantPoolHandle const&, int, bool, Thread*)+0xea
V [libjvm.so+0x89ca2a] InterpreterRuntime::multianewarray(JavaThread*, int*)+0x22a
j oracle.micro.valhalla.lword.matrix.Value.setup()V+9
How to reproduce:
1. Download benchmarks.jar from http://cr.openjdk.java.net/~skuksenko/valhalla/benchmarks.18.04.09/benchmarks.jar
or download sources and build: hg clone http://default:default@sthserver02.se.oracle.com:5000/valhalla-lword-benchmarks
2. Command line:
java -Xint -XX:+EnableValhalla -jar target/benchmarks.jar matrix.Value -f 1