8201329: [lword] Interpreter crashed on attempt to allocate two-dimensional array of values